servico-tomcat.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat 
spec:
  selector:
    app: tomcat 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
