ingress-tomcat.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.info
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat 
          servicePort: 80
  - host: opera.net 
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat 
          servicePort: 80
